using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationString
{
    internal static string Walk = "Walk";
    internal static string Attack = "Attack";
    internal static string IsGround = "IsGround";
    internal static string Jump = "Jump";
    internal static string CanMove = "CanMove";
    internal static string IsAlive = "IsAlive";
    internal static string IsHit = "IsHit";
    internal static string HitTrigger = "HitTrigger";
}
